--- a/404.html
+++ b/404.html
@@ -564,6 +564,16 @@
                 display: inline-flex;
                 background-color: #fff8c5;
             }
+            
+            svg{
+               position:absolute;/* 设置绝对定位 */
+        	   left:0;
+        	   right:0;
+        	   top:0;
+        	   bottom:0;
+        	   margin:auto;
+            }
+
         </style>
     </head>
     <body>
