--- a/404.html
+++ b/404.html
@@ -565,15 +565,6 @@
                 background-color: #fff8c5;
             }
             
-            svg{
-               position:absolute;/* 设置绝对定位 */
-        	   left:0;
-        	   right:0;
-        	   top:0;
-        	   bottom:0;
-        	   margin:auto;
-            }
-
         </style>
     </head>
     <body>
@@ -598,8 +589,7 @@
                 y="0px"
                 viewBox="0 0 375 177"
                 style="enable-background: new 0 0 375 177"
-                xml:space="preserve"
-                align="center">
+                xml:space="preserve">
                 <style type="text/css">
                     .st0 {
                         fill: none;
@@ -685,10 +675,9 @@
                     x2="218.59"
                     y2="87.74" />
             </svg>
-            <!--
             <h4>
                 <a href="/index.html" style="color: #3977ff;">前往网站导航↗</a>
-            </h4> -->
+            </h4>
         </article>
     </body>
 </html>
