--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -570,6 +570,17 @@
         <article class="markdown-body">
             <!-- <p><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></p> -->
             <h1>RSJEMC 纯生存服务器</h1>
+            <blockquote style="border-color: #68b1d0; background-color: #edf6fa;">
+                <p>
+                    <!-- <svg style="height: 1.5em; width: 1.5em" viewBox="0 0 15 15"><path fill-rule="evenodd" d="M7 2.3c3.14 0 5.7 2.56 5.7 5.7s-2.56 5.7-5.7 5.7A5.71 5.71 0 0 1 1.3 8c0-3.14 2.56-5.7 5.7-5.7zM7 1C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7-3.14-7-7-7zm1 3H6v5h2V4zm0 6H6v2h2v-2z"></path></svg> -->
+                    <strong style="font-size: 1.5em; color:#24292e;">公告栏</strong>
+                    <br>
+                    <a style="font-size: 1em; color:#24292e;">
+                        <!-- 公告栏内容 -->
+                        以下是大饼，预计2026年暑假才开服。:D
+                    </a>
+                </p>
+            </blockquote>
             <p style="font-size: 1.2em"><strong>快速前往</strong></p>
             <ol>
                 <li><a href="#1">服务器介绍</a></li>
@@ -670,11 +681,12 @@
                     >💰资助本站(您的资助都将用于游戏服务器维护!)</a
                 >
                 <hr style="height: 0.1em;margin: 0%;"/>
+                <a style="color: #757575">友情链接：</a>
                 <a
                     href="https://zh.minecraft.wiki/wiki/Minecraft_Wiki"
                     target="_blank"
                     style="color: #757575"
-                    >友情链接：↗Minecraft Wiki</a
+                    >↗Minecraft Wiki</a
                 >
             </p>
         </article>
