--- a/beta/index.html
+++ b/beta/index.html
@@ -752,7 +752,18 @@
             <p style="color: #6d6d6d; line-height: 10%">@media无法检测横竖屏-绿色</p>
             <p style="color: #6d6d6d; line-height: 10%">(显示为绿色建议更新浏览器)</p>
             <p style="color: #6d6d6d; line-height: 10%"><s>不支持background-color-白色</s></p>
-            <u><a href="blank.html" target="_blank">空白页↗</a>; <a href="/404.html" target="_blank">404页↗</a>;</u>
+            <u
+                ><a
+                    href="blank.html"
+                    target="_blank"
+                    >空白页↗</a
+                >;
+                <a
+                    href="/404.html"
+                    target="_blank"
+                    >404页↗</a
+                >;</u
+            >
             <h1>我是一级标题</h1>
             <h2>我是二级标题</h2>
             <h3>我是三级标题</h3>
