--- a/mcserver/banned-players.html
+++ b/mcserver/banned-players.html
@@ -582,9 +582,7 @@
                 <em><strong>此处显示被封禁的玩家：</strong></em>
             </p>
             <ol>
-                <li><code>Bunger</code>: Banned by an operator.</li>
-                <li><code>matscan</code>: Banned by an operator.</li>
-                <li><code>Herobrine</code>: Banned by an operator.</li>
+                <!-- <li><code>Herobrine</code>: Banned by an operator.</li> -->
             </ol>
             <hr />
             <p>
