--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -644,10 +644,10 @@
                 <p>注意：服务器地址及开启时间未定！</p>
             </blockquote>
             <h4>
-                Java Edition <u>1.20.1</u>: <s><code>127.0.0.1</code></s>
+                Java Edition <u>1.20.1</u>: <code>111.180.190.76:30951</code>
             </h4>
             <h4>
-                Bedrock Edition <u>1.20.1或更高</u>: <s><code>127.0.0.1:19132</code></s>
+                Bedrock Edition <u>1.20.1或更高</u>: <code>111.180.190.76:14120</code>
             </h4>
             <blockquote>
                 <p>
