update 	modified:   mcserver/index.html

--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -595,6 +595,7 @@
                 </li>
                 <li><a href="banned-players.html">黑名单↗</a></li>
             </ol>
+            <s>
             <h2><span id="1">1.服务器介绍</span></h2>
             <p>
                 <s><em>没啥好介绍的，反正没人玩。</em></s
@@ -644,11 +645,12 @@
                 <p>注意：服务器地址及开启时间未定！</p>
             </blockquote>
             <h4>
-                Java Edition <u>1.20.1</u>: <code>111.180.190.76:30951</code>
+                Java Edition <u>1.20.4</u>: <code>127.0.0.1:25588</code>
             </h4>
             <h4>
-                Bedrock Edition <u>1.20.1或更高</u>: <code>111.180.190.76:14120</code>
+                Bedrock Edition <u>1.20.4或更高</u>: <code>127.0.0.1:25587</code>
             </h4>
+        </s>
             <blockquote>
                 <p>
                     <a
@@ -681,12 +683,16 @@
                     >💰资助本站(您的资助都将用于游戏服务器维护!)</a
                 >
                 <hr style="height: 0.1em;margin: 0%;"/>
-                <a style="color: #757575">友情链接：</a>
                 <a
                     href="https://zh.minecraft.wiki/wiki/Minecraft_Wiki"
                     target="_blank"
                     style="color: #757575"
                     >↗Minecraft Wiki</a
+                >｜<a
+                href="https://simpfun.cn"
+                target="_blank"
+                style="color: #757575"
+                >↗简幻欢-Simpfun</a
                 >
             </p>
         </article>
