Update 	modified:   index.html 	new file:   mcserver/images/fdh.jpg 	modified:   mcserver/index.html

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                         <a
                             href="mcserver/index.html"
                             target="_blank"
-                            >RSJEMC生存服务器↗</a
+                            >RSJEMC服务器↗</a
                         >
                     </h3>
                 </li>
