--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -569,7 +569,7 @@
     <body>
         <article class="markdown-body">
             <!-- <p><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></p> -->
-            <h1>RSJEMC 纯生存服务器</h1>
+            <h1>Minecraft服务器(RSJEMC)</h1>
             <blockquote style="border-color: #68b1d0; background-color: #edf6fa;">
                 <p>
                     <!-- <svg style="height: 1.5em; width: 1.5em" viewBox="0 0 15 15"><path fill-rule="evenodd" d="M7 2.3c3.14 0 5.7 2.56 5.7 5.7s-2.56 5.7-5.7 5.7A5.71 5.71 0 0 1 1.3 8c0-3.14 2.56-5.7 5.7-5.7zM7 1C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7-3.14-7-7-7zm1 3H6v5h2V4zm0 6H6v2h2v-2z"></path></svg> -->
@@ -577,7 +577,9 @@
                     <br>
                     <a style="font-size: 1em; color:#24292e;">
                         <!-- 公告栏内容 -->
-                        以下是大饼，预计2026年暑假才开服。:D
+                        不定期开服，全凭心情:D<br>
+                        本站由各种公益项目支撑，崩服很常见。[当然，也有丢数据的风险，请keep calm(ツ)]
+                        <p><a href="mailto:risingsun5157@foxmail.com">📮联系腐竹(risingsun5157@foxmail.com)</a></p>
                     </a>
                 </p>
             </blockquote>
@@ -595,40 +597,23 @@
                 </li>
                 <li><a href="banned-players.html">黑名单↗</a></li>
             </ol>
-            <s>
             <h2><span id="1">1.服务器介绍</span></h2>
             <p>
                 <s><em>没啥好介绍的，反正没人玩。</em></s
                 >¯\(ツ)/¯
             </p>
-            <p>Java端Minecraft游戏服务器，支持基岩版互通，<em>无正版验证(不代表支持盗版)</em>。</p>
-            <p>玩法：纯生存</p>
-            <p>（主城有新手礼包，萌新玩家可领，老玩家随意）</p>
+            <p>Java端/Bedrock端互通Minecraft游戏服务器，无正版验证<em style="color: #757575;">(不代表支持盗版)</em>。</p>
+            <p>
+                玩法：纯生存
+                <br>地图类型：<strong style="font-size: 2em;">放 大 化</strong> (如下图)
+                <br><img src="images/fdh.jpg" title="放大化" width="80%"/>
+                <blockquote><a href="https://zh.minecraft.wiki/w/放大化">什么是“放大化”世界类型？↗</a></blockquote>
+            </p>
             <p><mark style="background-color: #ff000074">不要开挂！！开挂者封禁！</mark></p>
+
             <h2><span id="2">2.服务器截图</span></h2>
-            <figure>
-                <img
-                    src="images/1.jpg"
-                    alt="服务器截图1"
-                    title="主城" />
-                <img
-                    src="images/2.jpg"
-                    alt="服务器截图2"
-                    title="平原&水池" />
-                <img
-                    src="images/3.jpg"
-                    alt="服务器截图3"
-                    title="盆地&村庄" />
-                <img
-                    src="images/4.jpg"
-                    alt="服务器截图4"
-                    title="沉船&丛林" />
-                <img
-                    src="images/5.jpg"
-                    alt="服务器截图5"
-                    title="高原&樱花林" />
-            </figure>
-            <br />
+            广告位招租（bushi）
+
             <h2><span id="3">3.如何加入本服务器？</span></h2>
             <p>
                 首先，你需要去分辨你的Minecraft是<a
@@ -639,35 +624,35 @@
                     href="https://zh.minecraft.wiki/wiki/Java%E7%89%88"
                     target="_blank"
                     ><strong>Java版(Java Edition)</strong></a
-                >。然后根据以下对应的版本和地址进入：
+                >。然后根据以下对应的版本和地址进入：（地址的冒号后面为「端口」）
             </p>
             <blockquote style="color: #ff0000; border-color: #ff0000">
-                <p>注意：服务器地址及开启时间未定！</p>
+                <p>注意：服务器地址随时变化，请以下方为准！</p>
             </blockquote>
+<!-- MC IP -->
             <h4>
-                Java Edition <u>1.20.4</u>: <code>127.0.0.1:25588</code>
+                Java Edition <u>1.20.4</u>: <code>cn-yw-plc-1.of-7af93c01.shop:59784</code>
             </h4>
             <h4>
-                Bedrock Edition <u>1.20.4或更高</u>: <code>127.0.0.1:25587</code>
+                Bedrock Edition <u>1.20.4~1.20.62</u>: <code>cn-yw-plc-1.of-7af93c01.shop:20375</code>
             </h4>
-        </s>
             <blockquote>
                 <p>
                     <a
-                        href="https://zh.minecraft.wiki/w/教程/游玩服务器?variant=zh-cn"
+                        href="https://zh.minecraft.wiki/w/Tutorial:游玩服务器"
                         target="_blank"
-                        >知道了服务器IP地址，怎么游玩?(Java)↗</a
+                        >知道了服务器IP地址，怎么游玩?↗</a
                     >
                 </p>
                 <p>
                     <a
-                        href="https://zh.minecraft.wiki/wiki/%E6%95%99%E7%A8%8B/%E4%B8%8B%E8%BD%BD%E3%80%81%E5%AE%89%E8%A3%85%E4%B8%8E%E8%B4%AD%E4%B9%B0"
+                        href="https://zh.minecraft.wiki/w/Tutorial:下载、安装与购买?variant=zh-cn"
                         target="_blank"
                         >如何获取Minecraft？↗</a
                     >
                 </p>
             </blockquote>
-            <hr />
+            <hr style="height: 0.1em; margin: 0.5em;"/>
             <p>
                 <a
                     href="#top"
@@ -683,16 +668,32 @@
                     >💰资助本站(您的资助都将用于游戏服务器维护!)</a
                 >
                 <hr style="height: 0.1em;margin: 0%;"/>
+<!-- 友情链接放置处 -->
                 <a
                     href="https://zh.minecraft.wiki/wiki/Minecraft_Wiki"
                     target="_blank"
-                    style="color: #757575"
+                    style="color: #999999"
                     >↗Minecraft Wiki</a
                 >｜<a
                 href="https://simpfun.cn"
                 target="_blank"
-                style="color: #757575"
+                style="color: #999999"
                 >↗简幻欢-Simpfun</a
+                >｜<a
+                href="https://www.ruibaiyun.cloud"
+                target="_blank"
+                style="color: #999999"
+                >↗瑞白云</a
+                >｜<a
+                href="https://console.openfrp.net"
+                target="_blank"
+                style="color: #999999"
+                >↗OpenFrp Next</a
+                >｜<a
+                href="https://www.mefrp.com"
+                target="_blank"
+                style="color: #999999"
+                >↗ME Frp</a
                 >
             </p>
         </article>
