Update 	modified:   mcserver/index.html

--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -569,17 +569,18 @@
     <body>
         <article class="markdown-body">
             <!-- <p><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></p> -->
-            <h1>Minecraft服务器(RSJEMC)</h1>
+            <h1>Minecraft服务器(RSJEMC-Server)</h1>
             <blockquote style="border-color: #68b1d0; background-color: #edf6fa;">
                 <p>
                     <!-- <svg style="height: 1.5em; width: 1.5em" viewBox="0 0 15 15"><path fill-rule="evenodd" d="M7 2.3c3.14 0 5.7 2.56 5.7 5.7s-2.56 5.7-5.7 5.7A5.71 5.71 0 0 1 1.3 8c0-3.14 2.56-5.7 5.7-5.7zM7 1C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7-3.14-7-7-7zm1 3H6v5h2V4zm0 6H6v2h2v-2z"></path></svg> -->
                     <strong style="font-size: 1.5em; color:#24292e;">公告栏</strong>
                     <br>
                     <a style="font-size: 1em; color:#24292e;">
-                        <!-- 公告栏内容 -->
+<!-- 公告栏内容 -->
                         不定期开服，全凭心情:D<br>
                         本站由各种公益项目支撑，崩服很常见。[当然，也有丢数据的风险，请keep calm(ツ)]
                         <p><a href="mailto:risingsun5157@foxmail.com">📮联系腐竹(risingsun5157@foxmail.com)</a></p>
+                        注意：服务器地址随时变化，请以<u><a style="color: #757575;" href="#3">下方</a></u>为准！
                     </a>
                 </p>
             </blockquote>
@@ -631,17 +632,19 @@
             </blockquote>
 <!-- MC IP -->
             <h4>
-                Java Edition <u>1.20.4</u>: <code>cn-yw-plc-1.of-7af93c01.shop:59784</code>
+                Java Edition <u>1.20.4</u>: 
+                <code>111.180.190.76:30951</code>
             </h4>
             <h4>
-                Bedrock Edition <u>1.20.4~1.20.62</u>: <code>cn-yw-plc-1.of-7af93c01.shop:20375</code>
+                Bedrock Edition <u>1.20.40-1.20.62</u>: 
+                <code>111.180.190.76:14120</code>
             </h4>
             <blockquote>
                 <p>
                     <a
                         href="https://zh.minecraft.wiki/w/Tutorial:游玩服务器"
                         target="_blank"
-                        >知道了服务器IP地址，怎么游玩?↗</a
+                        >知道了服务器IP地址，怎么游玩？↗</a
                     >
                 </p>
                 <p>
