--- a/checkrspid/old/index.html
+++ b/checkrspid/old/index.html
@@ -331,7 +331,7 @@
             }
 
             .markdown-body blockquote {
-                padding: 0 1em;
+                padding: 0 0.4em;
                 color: #6a737d;
                 border-left: 0.25em solid #dfe2e5;
             }
@@ -568,8 +568,40 @@
     </head>
     <body>
         <article class="markdown-body">
-            <blockquote>RS-PID System v2 正在开发……</blockquote>
-            <a href="old/index.html">前往旧版(RSPID-29(2023))↗</a>
+            <!-- <p><u><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></u></p> -->
+            <h1>产品识别码验证系统</h1>
+            <blockquote style="border-width: 0.16em">
+                示例:<code>51231130152930002619332046014</code>。
+                <p style="padding: 0.35em 1.15em; color: #ff4800">本验证程序适用于2023/09/16及以后的产品识别码(RSPID-29位)。</p>
+            </blockquote>
+            <h4>
+                下方输入RSPID：<input
+                    type="button"
+                    value="粘贴"
+                    onclick="paste()"
+                    style="font-weight: 400; font-size: 1em; margin-left: 1em" />
+            </h4>
+            <p>
+                <input
+                    type="text"
+                    id="pid"
+                    size="29"
+                    maxlength="29" />
+                <input
+                    type="button"
+                    value="验证"
+                    onclick="verify()"
+                    style="font-weight: 500; font-size: 1.1em; margin-left: 0.15em" />
+            </p>
+            <strong
+                ><p style="line-height: 1em">状态：<a id="zt"></a></p
+            ></strong>
+            <p style="line-height: 0.3em">类型：<a id="lx"></a></p>
+            <p style="line-height: 0.3em">品牌：<a id="pp"></a></p>
+            <p style="line-height: 0.3em">型号：<a id="xh"></a></p>
+            <p style="line-height: 0.3em">时间：<a id="sj"></a></p>
+            <!-- id名为对应拼音首字母：状态，类型，品牌，型号，时间 -->
         </article>
+        <script src="checkrspid.js"></script>
     </body>
 </html>
