主页大改动 主页分类，并使用json来管理主页，更加方便；准备mRNA翻译器和RSPIDv2的开发（算是画个大饼吧）；捐赠页面加了个zfb（emm，反正没人打钱）。 	new file:   .gitignore 	new file:   alpha/lvtmrna/index.html 	new file:   alpha/rspidv2/checkrspid.js 	new file:   alpha/rspidv2/createrspid.html 	new file:   alpha/rspidv2/createrspid.js 	new file:   alpha/rspidv2/index.html 	modified:   beta/index.html 	renamed:    beta/blank.html -> blank.html 	new file:   donate.png 	modified:   index.html 	deleted:    mcserver/images/pay.jpg 	modified:   mcserver/index.html 	new file:   sitemap.json

--- a/alpha/rspidv2/createrspid.html
+++ b/alpha/rspidv2/createrspid.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="zh-cmn-Hans">
+<html>
     <head>
         <meta
             charset="utf-8"
             id="viewport"
             name="viewport"
             content="width=device-width, initial-scale=1" />
-        <title>不欢迎来到risingsun517.github.io</title>
+        <!-- iOS web app -->
+        <meta
+            name="apple-mobile-web-app-capable"
+            content="yes" />
+        <link
+            rel="apple-touch-icon-precomposed"
+            href="icon.png"
+            sizes="1024x1024" />
+        <meta
+            name="apple-mobile-web-app-status-bar-style"
+            content="black-translucent" />
+        <title>生成产品识别码(RSPID)</title>
 
         <style>
             html,
@@ -331,7 +342,7 @@
             }
 
             .markdown-body blockquote {
-                padding: 0 1em;
+                padding: 0 0.4em;
                 color: #6a737d;
                 border-left: 0.25em solid #dfe2e5;
             }
@@ -568,81 +579,130 @@
     </head>
     <body>
         <article class="markdown-body">
-            <h1>主页</h1>
-            <blockquote>
-                Here's risingsun517.github.io!
-                <h3 style="font-size: 1em">你来这里干啥◐‿◑</h3>
-            </blockquote>
-            <h2>网站导航🧭</h2>
-            <ol>
-                <strong style="font-size: 1.2em;" id="pageM">
-                    <!-- 详见sitemap.json -->
-                </strong>
-            </ol>
-            <hr style="height: 0.05em;"/> 
-            <blockquote style="color: #ff0000;">以下为Beta(测试阶段)页面</blockquote>
-            <ol >
-                <strong style="font-size: 1.2em;color: #6a737d;" id="pageB">
-                </strong>
-            </ol>
-            <blockquote>以下为Alpha(刚新建文件夹阶段:D)页面</blockquote>
-            <ol >
-                <strong style="font-size: 1.2em;color: #6a737d;" id="pageA">
-                </strong>
-            </ol>
-            <hr style="height: 0.05em;"/>
+            <!-- <p><u><a href="/index.html" style="font-size: 1.1em"><strong>←返回主页</strong></a></u></p> -->
+            <h1>产品识别码生成系统</h1>
+            <!-- <p><blockquote style="border-width: 0.16em;">
+              示例:<code>51231130152930002619332046011</code>。
+              <p style="padding: 0.35em 1.15em; color: #ff4800;">
+                本生成程序适用于2023/09/16及以后的产品识别码(RSPID-29位)。
+              </p>
+            </blockquote></p> -->
+            <!-- 输入部分 -->
             <p>
-                <a
-                    href="#top"
+                类型:
+                <select
+                    id="tp"
+                    style="font-size: 1em">
+                    <option value="51">Product</option>
+                    <option value="57">Ticket</option>
+                    <option value="29">Bill</option>
+                </select>
+                品牌:
+                <select
+                    id="pp"
+                    style="font-size: 1em">
+                    <option value="90">RISINGSUN</option>
+                    <option value="23">BoringClub</option>
+                </select>
+            </p>
+            <p id="date">
+                日期: 20
+                <input
+                    size="2"
+                    id="yy"
+                    type="text"
+                    maxlength="2"
+                    value="" />年
+                <input
+                    size="2"
+                    id="mm"
+                    type="text"
+                    maxlength="2"
+                    value="" />月
+                <input
+                    size="2"
+                    id="dd"
+                    type="text"
+                    maxlength="2"
+                    value="" />日
+            </p>
+            <p id="time">
+                时间:
+                <input
+                    size="2"
+                    id="h"
+                    type="text"
+                    maxlength="2"
+                    value="" />时
+                <input
+                    size="2"
+                    id="m"
+                    type="text"
+                    maxlength="2"
+                    value="" />分
+            </p>
+            <p>
+                型号:
+                <input
+                    size="7"
+                    id="xh"
+                    type="text"
+                    maxlength="5" />
+                范围:A~Z,0~9；不超过五个字符
+            </p>
+            <p>
+                代号:
+                <input
+                    size="2"
+                    id="dh"
+                    type="text"
+                    maxlength="2" />
+                范围:00~99；两个字符
+            </p>
+            <p id="rand">
+                随机码:
+                <input
+                    size="2"
+                    id="ra"
+                    type="text"
+                    maxlength="2" />
+                范围:01~99；两个字符
+            </p>
+            <!-- 按钮部分 -->
+            <p>
+                <input
+                    type="button"
+                    value="填充日期"
+                    onclick="autoDate()" />
+                <input
+                    type="button"
+                    value="填充时间"
+                    onclick="autoTime()" />
+                <input
+                    type="button"
+                    value="填充随机码"
+                    onclick="autoRand()" />
+            </p>
+            <p id="button2">
+                <input
+                    type="button"
+                    value="生成RSPID"
+                    onclick="creat()"
+                    style="font-size: 1.4em; font-weight: 550; margin-right: 0.5em" />
+                <input
+                    type="button"
+                    value="复制RSPID"
+                    onclick="copy()"
+                    style="font-size: 1.4em; font-weight: 400" />
+            </p>
+            <p>
+                结果：
+                <br />
+                <code
                     style="font-size: 1.1em"
-                    ><strong>⤒返回顶部</strong></a
-                >
-            </p>
-            <p>
-                <a
-                    href="https://github.com/risingsun517/risingsun517.github.io"
-                    target="_blank"
-                    >↗直击本仓库(risingsun517/risingsun517.github.io)</a
-                ><br>
-                <a
-                    href="/donate.png"
-                    target="_blank"
-                    >💰资助本站:D</a
-                >
-            </p>
-            <p>
-                <a
-                    href="https://u.tools"
-                    target="_blank"
-                    style="color: #6e6e6e;"
-                    >↗uTools</a
-                >
+                    id="output"></code>
             </p>
         </article>
-        <script>
-            function LoadPage(){
-                let site;
-                // 访问sitemap.json
-                fetch('sitemap.json')
-                    .then(response => response.json())
-                    .then(sitemap => {
-                        console.debug(sitemap);
-                        site = sitemap; // json本son
-                        // fetch为异步操作，这些代码只能往这里丢
-                        // 遍历json中的main并更新页面，以下同理
-                        for (var i = 0; i <= site.main.length - 1; ++i ){
-                            document.getElementById("pageM").innerHTML += `<li style="height: 1.2em;"><a href="${site.main[i].url}" target="_blank">${site.main[i].title}</a></li>`;
-                        }
-                        for (var i = 0; i <= site.beta.length - 1; ++i ){
-                            document.getElementById("pageB").innerHTML += `<li style="height: 1.2em;"><a href="${site.beta[i].url}" target="_blank">${site.beta[i].title}</a></li>`;
-                        }
-                        for (var i = 0; i <= site.alpha.length - 1; ++i ){
-                            document.getElementById("pageA").innerHTML += `<li style="height: 1.2em;"><a href="${site.alpha[i].url}" target="_blank">${site.alpha[i].title}</a></li>`;
-                        }
-                    });
-            }
-            // 加载页面后运行函数
-            LoadPage();
-        </script>
+        <script src="createrspid.js"></script>
     </body>
 </html>
