--- a/beta/index.html
+++ b/beta/index.html
@@ -754,7 +754,7 @@
             <p style="color: #6d6d6d; line-height: 10%"><s>不支持background-color-白色</s></p>
             <u
                 ><a
-                    href="blank.html"
+                    href="/blank.html"
                     target="_blank"
                     >空白页↗</a
                 >;
