--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -665,10 +665,10 @@
             </p>
             <p>
                 <a
-                    href="images/pay.jpg"
+                    href="/donate.png"
                     target="_blank"
                     style="color: #1976d2"
-                    >💰资助本站(您的资助都将用于游戏服务器维护!)</a
+                    >💰资助本站</a
                 >
                 <hr style="height: 0.1em;margin: 0%;"/>
 <!-- 友情链接放置处 -->
