--- a/blank.html
+++ b/blank.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
     <head>
         <meta
             charset="utf-8"
             id="viewport"
             name="viewport"
             content="width=device-width, initial-scale=1" />
+<!-- iOS web app -->
+        <!-- <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="apple-touch-icon-precomposed" href="app图标链接.png" sizes="1024x1024" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" /> -->
+<!-- 标题 -->
         <title>blank</title>
-
+<!-- markdown样式，导出自uTools -->
         <style>
             html,
             body {
@@ -567,6 +572,19 @@
         </style>
     </head>
     <body>
-        <article class="markdown-body"></article>
+        <article class="markdown-body">
+            
+<!-- 网页底部 -->
+            <hr style="height: 0.05em;"/>
+            <p>
+                <a href="#top" style="font-size: 1.1em"><strong>⤒返回顶部</strong></a>
+            </p>
+            <p>
+                <a href="/donate.png" target="_blank">💰资助本站:D</a>
+            </p>
+        </article>
+        <script>
+
+        </script>
     </body>
 </html>
