--- a/mcserver/index.html
+++ b/mcserver/index.html
@@ -633,11 +633,11 @@
 <!-- MC IP -->
             <h4>
                 Java Edition <u>1.20.4</u>: 
-                <code>111.180.190.76:30951</code>
+                <code>www.example.com</code>
             </h4>
             <h4>
                 Bedrock Edition <u>1.20.40-1.20.62</u>: 
-                <code>111.180.190.76:14120</code>
+                <code>www.example.com</code>
             </h4>
             <blockquote>
                 <p>
