--- a/bcl/index.html
+++ b/bcl/index.html
@@ -573,193 +573,350 @@
     </head>
     <body>
         <article class="markdown-body">
-            <h3>快速前往</h3>
-            <ol>
-                <li><a href="#1">无聊社书面表达法</a></li>
-                <li><a href="#2">无聊社语</a></li>
-            </ol>
+          <h3>快速前往</h3>
+<ol>
+<li><a href="#1">无聊社书面表达法</a></li>
+<li><a href="#2">无聊社语</a></li>
+</ol>
+<hr>
+<h2><span id="1">无聊社书面表达法</span></h2>
+<blockquote>
+<p>本部分内容正逐步完善……根据P-BC 2024 编写。</p>
+</blockquote>
+<table>
+<thead>
+<tr>
+<th>学科名</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>CNS</td>
+<td>语文</td>
+</tr>
+<tr>
+<td>MAT</td>
+<td>数学</td>
+</tr>
+<tr>
+<td>ENG</td>
+<td>英语</td>
+</tr>
+<tr>
+<td>PHY</td>
+<td>物理</td>
+</tr>
+<tr>
+<td>CMT</td>
+<td>化学</td>
+</tr>
+<tr>
+<td>LVT</td>
+<td>生物</td>
+</tr>
+<tr>
+<td>ARL</td>
+<td>地理</td>
+</tr>
+<tr>
+<td>POL</td>
+<td>政治</td>
+</tr>
+<tr>
+<td>HST</td>
+<td>历史</td>
+</tr>
+<tr>
+<td>PAE</td>
+<td>体育（不常用）</td>
+</tr>
+<tr>
+<td>ART</td>
+<td>美术（不常用）</td>
+</tr>
+<tr>
+<td>MSC</td>
+<td>音乐（不常用）</td>
+</tr>
+<tr>
+<td>CMP; COM</td>
+<td>信息（不常用）</td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr>
+<th>书物类型</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>BOOK</td>
+<td>教材</td>
+</tr>
+<tr>
+<td>EX</td>
+<td>练习册</td>
+</tr>
+<tr>
+<td>HW</td>
+<td>作业</td>
+</tr>
+<tr>
+<td>NEW; NEWS; N</td>
+<td>报纸</td>
+</tr>
+<tr>
+<td>NOTE</td>
+<td>笔记</td>
+</tr>
+<tr>
+<td>PA</td>
+<td>卷纸</td>
+</tr>
+<tr>
+<td>PJ</td>
+<td>卷纸夹</td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr>
+<th>标签</th>
+<th>用法</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>B</td>
+<td>&lt;B&gt;</td>
+<td>补充</td>
+</tr>
+<tr>
+<td>eg.</td>
+<td></td>
+<td>例子</td>
+</tr>
+<tr>
+<td>ex.</td>
+<td></td>
+<td>补充；拓展</td>
+</tr>
+<tr>
+<td>line</td>
+<td>line+NUMBER</td>
+<td>行，行数</td>
+</tr>
+<tr>
+<td>P</td>
+<td></td>
+<td>页码</td>
+</tr>
+<tr>
+<td>pa; para</td>
+<td>pa(ra)+NUMBER</td>
+<td>段落</td>
+</tr>
+<tr>
+<td>pg.; png.</td>
+<td></td>
+<td>图</td>
+</tr>
+<tr>
+<td>Po</td>
+<td>&lt;Po&gt;或单用</td>
+<td>来自其他机构</td>
+</tr>
+<tr>
+<td>xls.</td>
+<td>xls.[X1][X2]...<br/>[Y1]<br/>[Y2]<br/>...</td>
+<td>表格</td>
+</tr>
+<tr>
+<td>#COLOR</td>
+<td>#+COLOR</td>
+<td>颜色（具体可参考BCL）</td>
+</tr>
+</tbody>
+</table>
+<blockquote>
+<p>特殊情况下，「关键字」能够作为「修饰符」或「前置修饰符」使用，将不在「修饰符」或「前置修饰符」中阐述。</p>
+<p>部分字符在手写体中可能略有差别。</p>
+</blockquote>
+<table>
+<thead>
+<tr>
+<th>关键字</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>adj.; dj.</td>
+<td>形容词</td>
+</tr>
+<tr>
+<td>adv.; dv.</td>
+<td>副词</td>
+</tr>
+<tr>
+<td>ag.; <s>a</s>.</td>
+<td>定语</td>
+</tr>
+<tr>
+<td>art.</td>
+<td>冠词</td>
+</tr>
+<tr>
+<td>av.</td>
+<td>壮语</td>
+</tr>
+<tr>
+<td>b.</td>
+<td>补语</td>
+</tr>
+<tr>
+<td>conj.; cj.</td>
+<td>连词</td>
+</tr>
+<tr>
+<td>i.</td>
+<td>感叹词；拟声词<br/>【注】一般二者混用，在特殊情况下需用中文标明</td>
+</tr>
+<tr>
+<td>n.</td>
+<td>名词</td>
+</tr>
+<tr>
+<td>nb.</td>
+<td>数量词（数词+量词）</td>
+</tr>
+<tr>
+<td>nm.</td>
+<td>数词</td>
+</tr>
+<tr>
+<td>nr.</td>
+<td>量词</td>
+</tr>
+<tr>
+<td>obj.; O</td>
+<td>宾语</td>
+</tr>
+<tr>
+<td>phr.</td>
+<td>短语</td>
+</tr>
+<tr>
+<td>prep.; pr.</td>
+<td>介词</td>
+</tr>
+<tr>
+<td>pron.; pn.</td>
+<td>代词</td>
+</tr>
+<tr>
+<td>sub.; S</td>
+<td>主语</td>
+</tr>
+<tr>
+<td>stc.</td>
+<td>句子；从句</td>
+</tr>
+<tr>
+<td>t.</td>
+<td>时态</td>
+</tr>
+<tr>
+<td>v.</td>
+<td>动词</td>
+</tr>
+<tr>
+<td>v'; V</td>
+<td>谓语</td>
+</tr>
+<tr>
+<td>wh.; wh-?</td>
+<td>疑问词</td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr>
+<th>修饰符</th>
+<th>用法</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr>
+<th>前置修饰符</th>
+<th>用法</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr>
+<th>特殊符号</th>
+<th>用法</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<hr>
+<h2><span id="2">无聊社语(BCL)</span></h2>
+<blockquote>
+<p>此部分正逐渐完善……以下内容较为抽象，请酌（不）情（要）理解。</p>
+</blockquote>
+<table>
+<thead>
+<tr>
+<th>BCL</th>
+<th>用法/释义</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+
+
+<!-- 网页底部 -->
             <hr />
-            <h2><span id="1">无聊社书面表达法</span></h2>
-            <blockquote>
-                <p>本部分内容正逐步完善……根据P-BC 2024 编写。</p>
-            </blockquote>
-            <table>
-                <thead>
-                    <tr>
-                        <th>学科名</th>
-                        <th>说明</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>CNS</td>
-                        <td>语文</td>
-                    </tr>
-                    <tr>
-                        <td>MAT</td>
-                        <td>数学</td>
-                    </tr>
-                    <tr>
-                        <td>ENG</td>
-                        <td>英语</td>
-                    </tr>
-                    <tr>
-                        <td>PHY</td>
-                        <td>物理</td>
-                    </tr>
-                    <tr>
-                        <td>CMT</td>
-                        <td>化学</td>
-                    </tr>
-                    <tr>
-                        <td>LVT</td>
-                        <td>生物</td>
-                    </tr>
-                    <tr>
-                        <td>ARL</td>
-                        <td>地理</td>
-                    </tr>
-                    <tr>
-                        <td>POL</td>
-                        <td>政治</td>
-                    </tr>
-                    <tr>
-                        <td>HST</td>
-                        <td>历史</td>
-                    </tr>
-                    <tr>
-                        <td>PAE</td>
-                        <td>体育</td>
-                    </tr>
-                    <tr>
-                        <td>ART</td>
-                        <td>美术</td>
-                    </tr>
-                    <tr>
-                        <td>MSC</td>
-                        <td>音乐</td>
-                    </tr>
-                    <tr>
-                        <td>CMP</td>
-                        <td>信息</td>
-                    </tr>
-                </tbody>
-            </table>
-            <table>
-                <thead>
-                    <tr>
-                        <th>书物类型</th>
-                        <th>说明</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <table>
-                <thead>
-                    <tr>
-                        <th>标签</th>
-                        <th>说明</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <blockquote>
-                <p>特殊情况下，「关键字」能够作为「修饰符」或「前置修饰符」使用，将不在「修饰符」或「前置修饰符」中阐述。</p>
-                <p>部分字符在手写体中可能略有差别。</p>
-            </blockquote>
-            <table>
-                <thead>
-                    <tr>
-                        <th>关键字</th>
-                        <th>说明</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <table>
-                <thead>
-                    <tr>
-                        <th>修饰符</th>
-                        <th>用法</th>
-                        <th>说明</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <table>
-                <thead>
-                    <tr>
-                        <th>前置修饰符</th>
-                        <th>用法</th>
-                        <th>说明</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <table>
-                <thead>
-                    <tr>
-                        <th>特殊符号</th>
-                        <th>用法</th>
-                        <th>说明</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <hr />
-            <h2><span id="2">无聊社语(BCL)</span></h2>
-            <blockquote>
-                <p>此部分正逐渐完善……以下内容较为抽象，请酌（不）情（要）理解。</p>
-            </blockquote>
-            <table>
-                <thead>
-                    <tr>
-                        <th>BCL</th>
-                        <th>用法/释义</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-            <!-- 网页底部 -->
-            <hr style="height: 0.05em" />
             <p>
                 <a
                     href="#top"
